apps/homelab/affine/affine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
spec:
  selector:
    app: affine
  ports:
    - port: 80
      targetPort: 3000
