apps/homelab/affine/postgres_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine-postgres
  namespace: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
    
---
apiVersion: v1
kind: Service
metadata:
  name: affine-postgres
  namespace: affine
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
